# LLVM-Instruction-Parser

./: .gitignore  README.md  instruction.py  llvm_instruction_parser.py  old.py  parsetab.py  pyproject.toml
src/llvm_inst_parser/: __init__.py  instruction.py  llvm_instruction_parser.py
