[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "llvm_inst_parser"
dynamic = ["version"]
authors = [
  { name="Bill Mahoney", email="wmahoney@unomaha.edu" },
]
description = "Parse instructions in LLVM"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "llvm", "parser"
]
dependencies = [
    "ply==3.11",
]

[tool.setuptools.dynamic]
version = {attr = "llvm_inst_parser.__version__"}

[tool.setuptools.package-data]
poker = ["py.typed"]

[project.urls]
"Source" = "https://github.com/GitHubbillm/LLVM-Instruction-Parser"
"Bug Tracker" = "https://github.com/GitHubbillm/LLVM-Instruction-Parser/issues"

[tool.mypy]
files = ["src/llvm_inst_parser/",]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
